Diferenciando método de envio de email para criação e atualização de cadastro.

--- a/app/views/citizen_mailer/send_registration_creation_notification.html.erb
+++ b/app/views/citizen_mailer/send_registration_creation_notification.html.erb
@@ -1,3 +1,3 @@
 <h1>Cadastro de Munícipe</h1>
 <p>Olá <%= @citizen.full_name %>,</p>
-<p>Seu cadastro foi atualizado/criado com sucesso!</p>
+<p>Seu cadastro foi criado com sucesso!</p>
